--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,7 +5,8 @@
 :root {
     --background: #ffffff;
     --foreground: #171717;
-}
+    --primary: 210 91% 40%;
+}   
 
 body {
     color: var(--foreground);
