--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,8 +8,15 @@
     --primary: 210 91% 40%;
 }   
 
+@layer base {
+    html, body {
+        @apply h-full;
+    }
+}
+
 body {
     color: var(--foreground);
     background: var(--background);
     font-family: Arial, Helvetica, sans-serif;
+    overflow-x: hidden;
 }
